# check_ege

./: docker-compose.yaml
bot/: Dockerfile  pyproject.toml
bot/src/checker/: router.py  utils.py
